crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_general_binder_in_ens.rs
fn rejects_general_binder_in_ens(x: i32) -> i32
//@ req true
//@ ens ?V == result
{
    x
}

fn main() {
    rejects_general_binder_in_ens(1);
}
